syntax = 'proto3';

package notifications;

option go_package = "route256/loms/pkg/notifications";

import "google/api/annotations.proto";

service Notifications {
    rpc List(RequestList) returns (ResponseList) {
        option (google.api.http) = {
            get: "/list"
        };
    }
}

message RequestList {
    int64 user = 1;
}

message ResponseList {
    message Notification {
        string message = 1;
        int64  createdAt = 2;
    }

    int64 user = 1;
    repeated Notification items = 2;
}
